*
* 2.0-M5
*

- Android Console:
	- Added "capabilities" in node overview (changed to expandable list view)
- Fixed bug in handling floating point Windows performance counters
- Added "comments" attribute to NXSL "DCI" class
- New NXSL function sha256
- Fixed broken nxagent.sms SMS driver
- Added support for SNMP traps over IPv6
- Switched to SHA-256 for password hashing
- Management console:
	- Fixed broken VPN connectors configuration
	- "Inverted values" option on line charts
	- Filter in predefined graphs tree
	- Values of selected DCIs can be shown on object overview page
- Fixed issues: #50, #797, #816, #817


*
* 2.0-M4
*

- Script export/import
- Object tools export/import
- DCI summary tables export/import
- Template hierarchy preserved during export/import
- NXSL functions and classes to work with alarms
- MEGATEC protocol support in UPS subagent
- Fixed broken WoL functionality
- Fixed broken PING subagent
- Fixed database upgrade issues on MS SQL
- IPv6 support in PING subagent
- Network device driver can be manually selected for node by setting snmp.driver custom attribute
- Added default melodies for alarms
- Added option to play sound on alarm sound preference page
- Interface objects can be used on network maps
- Android Agent:
	- Added support for Lollipop MR1 (v5.1)
	- Updated support library
- Android Console:
	- Changed order of overview items to match Java console (node browser)
	- Added MTU field in interface details (node browser)
	- Updated support library
- Fixed issues: #655, #657, #696, #701, #724, #799, #800, #803, #804, #805, #811, #812, #813


*
* 2.0-M3
*

- IPv6 support: communications, address information, topology
- New NXSL functions: gethostbyaddr, gethostbyname, md5, sha1, AgentReadList
- Added posibility to wakeup unmanaged node
- Instance discovery separated from configuration polls
- Instance discovery type "SNMP Walk - OIDs" sets instance name to OID value by default
- GPIO.PinState parameter in Raspberry Pi subagent