@@ -10,6 +10,7 @@
 - Fixed broken nxagent.sms SMS driver
 - Added support for SNMP traps over IPv6
 - Switched to SHA-256 for password hashing
+- Timestamp can be provided in nxapush
 - Management console:
 	- Fixed broken VPN connectors configuration
 	- "Inverted values" option on line charts
